# studio

./: .gitignore  .mcp.json  AGENT.md  CLAUDE.md  README.md  components.json  dummy.txt  index.html  jsconfig.json  package-lock.json  package.json  release.sh  svelte.config.js  vite.config.js
.commandcode/taste/: taste.md
.cursor/skills/guidelines/: SKILL.md
.github/workflows/: release.yml
packaging/aur/discerns/: .SRCINFO  PKGBUILD
scripts/: license-tool.mjs  monitor.sh
src/: App.svelte  app.css  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cloudflare.rs  commands.rs  copilot.rs  docker.rs  lib.rs  license.rs  metrics.rs  secrets.rs
src-tauri/src/db/: backup.rs  connection.rs  d1.rs  libsql.rs  mod.rs  mysql.rs  query.rs  schema.rs  sqlite.rs
src-tauri/src/mcp/: mod.rs  server.rs  tools.rs
src/lib/: ai-suggestions.js  ai.js  api.js  app-zoom.js  cell-display.js  cell-expand.js  cell-value.js  chart-utils.js  cloudflare.js  connection-uri.js  copilot.js  export.js  foreign-key-nav.js  format-sql.js  geo.js  input-shortcuts.js  insert-field.js  insider-tips.js  json-inspector.js  jsonpath.js  markdown-highlight.js  monaco-ai-complete.js  monaco-env.js  monaco-sql-complete.js  monaco-themes.js  orm-builder.js  platform.js  row-inspector.js  shiki-highlighter.js  studio-tabs.js  table-column-widths.js  table-list.js  table-query.js  table-row-indices.js  utils.js
src/lib/components/: AboutDialog.svelte  AiChartRenderer.svelte  AiChat.svelte  AiMarkdown.svelte  AiModelPicker.svelte  AiSettingsDialog.svelte  AiSidebar.svelte  AiSqlBlock.svelte  BackupPage.svelte  CarbonMeterChart.svelte  CellQuickLook.svelte  ChartView.svelte  ChartsPage.svelte  ChoroplethChart.svelte  CloudflareLogin.svelte  ColumnResizeHandle.svelte  CommandPalette.svelte  ConnectionModal.svelte  CopilotLogin.svelte  CreateDatabaseDialog.svelte  CreateSequenceDialog.svelte  CreateTableDialog.svelte  CreateTriggerDialog.svelte  DangerousActionDialog.svelte  DashboardPage.svelte  DataTable.svelte  DataTableSkeleton.svelte  DatabaseSwitcher.svelte  DdlConfirmDialog.svelte  DiagramsPage.svelte  DisconnectDialog.svelte  DockerLaunchModal.svelte  EChartPanel.svelte  EntityRelationPage.svelte  EnumsPage.svelte  ErdFocusController.svelte  ErdTableNode.svelte  ForeignKeyDialog.svelte  InsertRowDialog.svelte  InsiderDialog.svelte  (+40 more)
src/lib/components/ui/alert/: alert.svelte
src/lib/components/ui/checkbox/: checkbox.svelte
src/lib/components/ui/command/: command-dialog.svelte  command-group.svelte  command-input.svelte  command-item.svelte  command-list.svelte  command-shortcut.svelte  command.svelte
src/lib/components/ui/dialog/: dialog-content.svelte  dialog-footer.svelte  dialog-overlay.svelte
src/lib/components/ui/dropdown-menu/: dropdown-menu-content.svelte  (+3 more)
src/lib/stores/: activity-log.js  ai-chat-params.js  ai-settings.js  ai-skills.js  connections.js  conversations.js  dashboards.js  layout.js  license.js  query-history.js  recent-tabs.js  saved-charts.js  saved-diagrams.js  settings.js  studio-db.js  table-column-widths.js
src/lib/themes/: app-themes-inspired.css  app-themes.css  monaco-presets.js  registry.js
(+11 files in other folders)
