[package]
name = "app"
version = "0.1.4"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["macos-private-api"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSView", "objc2-quartz-core"] }
objc2-quartz-core = { version = "0.3", features = ["CALayer"] }
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "sync", "process"] }
axum = { version = "0.7", features = ["json", "macros"] }
tower-http = { version = "0.5", features = ["cors"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "sqlite", "mysql", "json", "chrono", "uuid", "rust_decimal"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots", "stream"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }
uuid = { version = "1", features = ["serde"] }
urlencoding = "2"
ed25519-dalek = "2"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"

[profile.release]
strip = true
lto = true
codegen-units = 1
